
2017-02-11  Karl Kuhrman  <kkuhrman@barzensuit.org>
	* configure.ac: advanced version number to 0.1.2
	* src/bzensock.c: refactored sockets API to resemble corresponding Gnu fns.
	
2017-02-03  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac: advanced version number to 0.1.1
	* src/bzensock.c: unit tested code for dynamic allocation of sockaddr_un
	* src/bzenmem.c: added bzen_realloc()

2017-02-01  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac Version 0.1.0 support for libtool, Gnu Lib and unit tests
	* ChangeLog Initial check in
	* bzensock.c Opens and closes a local socket
