@@ -25,8 +25,13 @@
 #include <stdlib.h>
 
 /* libzenc includes */
+#include "bzenmem.h"
 #include "bzentest.h"
 #include "bzensock.h"
+
+/* unit test on loopback only */
+const char* BZENSOCK_LOCAL_HOST = "127.0.0.1";
+#define BZENSOCK_LOCAL_HOST BZENSOCK_LOCAL_HOST
 
 int main (int argc, char *argv[])
 {
@@ -34,46 +39,134 @@ int main (int argc, char *argv[])
   int namespace = PF_INET;
   int style = SOCK_STREAM;
   int protocol = 0;
-  const char* host;
-  unsigned short int port;
-  int format;  
-  int socket_fd;
-  
-  /* @todo: get the test host name or address. */
-  
-  /* @todo: get port number in unreserved range. */
-  
-  /* @todo: assign format IPv4 or IPv6 */
+  uint32_t host;
+  uint32_t port;
+  int format;
+  int check;
 
-  /* create the socket */
-  socket_fd = bzen_socket_listen_inet(style, 
-				      protocol, 
-				      host,
-				      port,
-				      format);
-  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_listen_inet()",
-						    (socket_fd < 0),
+  /* server socket*/
+  int server_socket_fd;
+  int server_side_connection_fd;
+  struct sockaddr_in* server_address;
+  size_t server_address_size;
+
+  /* client socket */
+  int client_socket_fd;
+  
+  /* construct server address */
+  host = INADDR_LOOPBACK;
+  port = IPPORT_USERRESERVED + 2048;
+  server_address =   bzen_socket_address_in(host, port);
+  server_address_size = sizeof(*server_address);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_address_in()",
+						    (server_address != NULL),
+						    1,
+						    "\n\tserver address\n"))
+    {
+      fprintf(stderr, "\n\tserver address @ %d\n", server_address);
+      result = BZEN_TEST_EVAL_FAIL;
+      goto END_TEST;
+    }
+
+  /* create server socket */
+  server_socket_fd = bzen_socket_open(namespace, style, protocol);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_open()",
+						    (server_socket_fd < 0),
+						    0,
+						    "\n\tserver socket\n"))
+    {
+      fprintf(stderr, "failed to open INET socket; return: %d\n", (int) server_socket_fd);
+      result = BZEN_TEST_EVAL_FAIL;
+      goto END_TEST;
+    }
+
+  /* bind server socket to address */
+  check = bzen_socket_bind(server_socket_fd, (struct sockaddr*)server_address, server_address_size);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_bind()",
+						    (check < 0),
+						    0,
+						    "\n\tserver socket\n"))
+    {
+      result = BZEN_TEST_EVAL_FAIL;
+      goto END_TEST;
+    }
+
+  /* enable connection requests */
+  check = bzen_socket_listen(server_socket_fd, 1);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_listen()",
+						    (check < 0),
 						    0,
 						    NULL))
     {
-      fprintf(stderr, "failed to open inet socket; return: %d\n", (int) socket_fd);
+      result = BZEN_TEST_EVAL_FAIL;
+      goto END_TEST;
+    }
+
+  /* create client socket */
+  client_socket_fd = bzen_socket_open(namespace, style, protocol);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_open()",
+						    (client_socket_fd < 0),
+						    0,
+						    "\n\tclient socket\n"))
+    {
+      fprintf(stderr, "failed to open INET socket; return: %d\n", (int) client_socket_fd);
       result = BZEN_TEST_EVAL_FAIL;
       goto END_TEST;
     }
   
-  /* @todo: transmission tests (use loopback?) */
-  
-  /* Close the socket. */
-  result = bzen_socket_close(socket_fd, SHUT_RDWR);
-  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_close()",
-						    (result == BZEN_TEST_EVAL_PASS),
-						    1,
-						    NULL)) 
+  /* request connection with server  */
+  check = bzen_socket_connect(client_socket_fd, (struct sockaddr*)server_address, server_address_size);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_connect()",
+						    (check < 0),
+						    0,
+						    NULL))
+    {
+      result = BZEN_TEST_EVAL_FAIL;
+      goto END_TEST;
+    }
+
+  /* accept connection request */
+  struct sockaddr address_out;
+  socklen_t address_out_size;
+  server_side_connection_fd = bzen_socket_accept(server_socket_fd, 
+						 &address_out,
+						 &address_out_size);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_bind()",
+						    (check < 0),
+						    0,
+						    "\n\tserver socket\n"))
     {
       result = BZEN_TEST_EVAL_FAIL;
       goto END_TEST;
     }
 
  END_TEST:
+
+  /* Close the sockets. */
+  check = bzen_socket_close(server_side_connection_fd, SHUT_RDWR);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_close()",
+						    (check == 0),
+						    1,
+						    "\n\tserver-side connection\n")) 
+    {
+      result = BZEN_TEST_EVAL_FAIL;
+    }
+  check = bzen_socket_close(client_socket_fd, SHUT_RDWR);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_close()",
+						    (check == 0),
+						    1,
+						    "\n\tclient\n")) 
+    {
+      result = BZEN_TEST_EVAL_FAIL;
+    }
+  check = bzen_socket_close(server_socket_fd, SHUT_RDWR);
+  if (BZEN_TEST_EVAL_FAIL == bzen_test_eval_fn_bool("bzen_socket_close()",
+						    (check == 0),
+						    1,
+						    "\n\tserver\n")) 
+    {
+      result = BZEN_TEST_EVAL_FAIL;
+    }
+
   return result;
 }
