@@ -1,3 +1,7 @@
+2017-02-13  Karl Kuhrman  <kkuhrman@barzensuit.org>
+
+	* configure.ac:	advanced version to 0.1.3
+	* inc/bzensock.h: add support for Internet namespace
 
 2017-02-11  Karl Kuhrman  <kkuhrman@barzensuit.org>
 	* configure.ac: advanced version number to 0.1.2
